feat: Implement chat functionality for orders, including message sending and user mentions - Add ChatMessage model with associations to Order and User - Create OrderChatChannel for real-time messaging - Implement ChatMessagesController for handling chat message retrieval and creation - Enhance order views to include chat interface - Add autosave functionality for order forms - Update Japanese locale for chat messages - Create tests for chat message model and channel

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,6 +5,7 @@ ja:
       item: "アイテム"
       client: "クライアント"
       user: "ユーザー"
+      chat_message: "チャットメッセージ"
     attributes:
       order:
         client_id: "クライアント"
@@ -63,6 +64,10 @@ ja:
             name:
               blank: "を入力してください"
               taken: "は既に使用されています"
+        chat_message:
+          attributes:
+            content:
+              blank: "を入力してください"
   errors:
     messages:
       blank: "を入力してください"
